--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,13 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.entries.any? %>
+      <h3>Posts (<%= @user.entries.count %>)</h3>
+      <ol class="entries">
+        <%= render @entries %>
+      </ol>
+      <%= will_paginate @entries %>
+    <% end %>
+  </div>
 </div>
