--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,27 +2,23 @@
   <div class="row">
     <aside class="col-md-4">
       <section class="user_info">
-        <%= render 'shared/user_info' %>
+        <%= render "shared/user_info" %>
       </section>
-      <section class="micropost_form">
-        <%= render 'shared/entry_form' %>
+      <section class="stats">
+        <%= render "shared/stats" %>
+      </section>
+      <section class="entry_form">
+        <%= render "shared/entry_form" %>
       </section>
     </aside>
     <div class="col-md-8">
       <h3>Micropost Feed</h3>
-      <%= render 'shared/feed' %>
+      <%= render "shared/feed" %>
     </div>
   </div>
 <% else %>
   <div class="center jumbotron">
     <h1><%= t ".welcome" %></h1>
-
-    <h2>
-    <% if logged_in? %>
-
-    <% end %>
-    </h2>
-
     <%= link_to t(".btn_signup"), signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 <% end %>
