--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -11,4 +11,16 @@
         data: { confirm: "You sure?" } %>
     <% end %>
   </span>
+
+  <div class="entry_comments row">
+    <% if !entry.comments.empty? %>
+      <% entry.comments.each do |obj| %>
+        <%= render "comments/comment", comment: obj %>
+      <% end %>
+    <% end %>
+  </div>
+
+  <section class="entry_form">
+    <%= render "shared/comment_form", comment: @comment, entry: entry %>
+  </section>
 </li>
