--- a/app/views/shared/_entry_form.html.erb
+++ b/app/views/shared/_entry_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@entry) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
+  <%= render "shared/error_messages", object: f.object %>
   <%= f.label :title %>
-  <%= f.text_field :title, class: 'form-control' %>
+  <%= f.text_field :title, class: "form-control" %>
   <div class="field">
     <%= f.text_area :content, placeholder: "Compose new micropost..." %>
   </div>
