--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -8,7 +8,7 @@
       <span><b>Entries:</b> <%= @user.entries.count %></span>
     </section>
     <section class="stats">
-      <%= render 'shared/stats' %>
+      <%= render "shared/stats" %>
       <% if @users.any? %>
         <div class="user_avatars">
           <% @users.each do |user| %>
